--- a/client/main.html
+++ b/client/main.html
@@ -2,6 +2,8 @@
   <title>Bet Simulator</title>
 
   <!-- Required meta tags -->
+  <!--Not completely sure, but I think there is missing one meta tag to indicate the screen readers the language of the web page -->
+  <!-- It is good to add some more meta tags, since them increase accesibility -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
